project hover added

--- a/index.html
+++ b/index.html
@@ -116,20 +116,20 @@
             </div>
             <div class="box">
                 <img src="images/icons/ribon.png" alt="">
-                <h3 class="project-number">54</h3>
-                <p class="award">Awards Winnings</p>
+                <h3 class="project-number">1458</h3>
+                <p class="award">Project Finished</p>
                 
             </div>
             <div class="box">
                 <img src="images/icons/ribon.png" alt="">
-                <h3 class="project-number">54</h3>
-                <p class="award">Awards Winnings</p>
+                <h3 class="project-number">590</h3>
+                <p class="award">Clients Worked</p>
                 
             </div>
             <div class="box">
                 <img src="images/icons/ribon.png" alt="">
-                <h3 class="project-number">54</h3>
-                <p class="award">Awards Winnings</p>
+                <h3 class="project-number">22578</h3>
+                <p class="award">Email Send</p>
             </div>
         </div>
     </div>
